datasource db {
    provider = "postgresql"
    url      = env("DATABASE_URL")
}

generator client {
    provider = "prisma-client-js"
}

model appConfig {
    key   String @id
    type  String
    value String
}

model User {
    id             Int             @id @default(autoincrement())
    username       String          @unique
    name           String
    lastName       String?
    password       String
    role           String
    active         Boolean         @default(true)
    createdAt      DateTime        @default(now())
    updatedAt      DateTime        @updatedAt
    tasks          Task[]
    stockMovements StockMovement[]
    logs           Log[]
}

model Product {
    id                  Int                @id @default(autoincrement())
    name                String
    description         String?
    price               Decimal
    image               String?
    reference           String?            @unique
    createdAt           DateTime           @default(now())
    updatedAt           DateTime           @updatedAt
    active              Boolean            @default(true)
    productCategories   ProductCategory[]
    stockMovements      StockMovement[]
    subtasks            Subtask[]
    productComponents   ProductComponent[] @relation("ParentProduct")
    componentOfProducts ProductComponent[] @relation("ChildProduct")
}

model ProductComponent {
    id       Int     @id @default(autoincrement())
    quantity Int
    parentId Int
    parent   Product @relation("ParentProduct", fields: [parentId], references: [id])
    childId  Int
    child    Product @relation("ChildProduct", fields: [childId], references: [id])

    @@unique([parentId, childId], name: "UniqueParentChildCombination")
}

model category {
    id                Int               @id @default(autoincrement())
    name              String            @unique
    description       String?
    productCategories ProductCategory[]
}

model ProductCategory {
    id         Int      @id @default(autoincrement())
    productId  Int
    product    Product  @relation(fields: [productId], references: [id])
    categoryId Int
    category   category @relation(fields: [categoryId], references: [id])

    @@unique([productId, categoryId], name: "UniqueProductCategoryCombination")
}

model StockMovement {
    id        Int      @id @default(autoincrement())
    quantity  Int
    timestamp DateTime @default(now())
    reason    String
    userId    Int
    user      User     @relation(fields: [userId], references: [id])
    productId Int
    product   Product  @relation(fields: [productId], references: [id])
}

model Task {
    id        Int       @id @default(autoincrement())
    createdAt DateTime  @default(now())
    updatedAt DateTime  @updatedAt
    notes     String?
    status    String    @default("pending")
    userId    Int
    user      User      @relation(fields: [userId], references: [id])
    subtasks  Subtask[]
}

model Subtask {
    id            Int            @id @default(autoincrement())
    quantity      Int
    order         Int
    status        String         @default("pending")
    taskId        Int
    task          Task           @relation(fields: [taskId], references: [id])
    productId     Int
    product       Product        @relation(fields: [productId], references: [id])
    subtaskEvents SubtaskEvent[]
}

model SubtaskEvent {
    id                Int      @id @default(autoincrement())
    timestamp         DateTime @default(now())
    quantityCompleted Int
    subtaskId         Int
    subtask           Subtask  @relation(fields: [subtaskId], references: [id])
}

model Log {
    id        Int      @id @default(autoincrement())
    tableName String
    rowId     Int
    action    String
    timestamp DateTime @default(now())
    userId    Int
    User      User     @relation(fields: [userId], references: [id])
}

model session {
    sid    String    @id @default(cuid())
    sess   String
    expire DateTime?
}
