Table appConfig {
    key String PK
    type String
    value String
}

Table User {
    id Int PK
    username String Unique
    name String
    lastName String
    password String
    role String
    active Boolean 
    createdAt DateTime 
    updatedAt DateTime
}

Table Product {
    id Int PK
    name String
    description String
    price Decimal
    image String
    reference String Unique
    createdAt DateTime 
    updatedAt DateTime
    active Boolean 
}

Table ProductComponent {
    id Int PK
    quantity Int
    parentId Int
    childId Int
}

Table category {
    id Int PK
    name String Unique
    description String
}

Table ProductCategory {
    id Int PK
    productId Int
    categoryId Int
}

Table StockMovement {
    id Int PK
    quantity Int
    timestamp DateTime
    reason String
    userId Int
    productId Int
}

Table Task {
    id Int PK
    createdAt DateTime
    updatedAt DateTime
    notes String
    status String 
    userId Int
}

Table Subtask {
    id Int PK
    order Int
    quantity Int
    status String 
    taskId Int
    productId Int
}

Table SubtaskEvent {
    id Int PK
    timestamp DateTime
    quantityCompleted Int
    subtaskId Int
}

Table Log {
    id Int PK
    tableName String
    rowId Int
    action String
    timestamp DateTime
    userId Int
}

Table session {
    sid String PK
    sess String
    expire DateTime
}

// Relations

Ref: User.id < StockMovement.userId
Ref: User.id < Task.userId
Ref: User.id < Log.userId

Ref: Product.id < ProductComponent.parentId
Ref: Product.id > ProductComponent.childId

Ref: Product.id < ProductCategory.productId
Ref: category.id < ProductCategory.categoryId

Ref: Product.id < StockMovement.productId

Ref: Product.id < Subtask.productId

Ref: Task.id < Subtask.taskId

Ref: Subtask.id < SubtaskEvent.subtaskId